@@ -6,53 +6,39 @@ import java.nio.file.Path;
 import java.util.Map;
 import java.io.IOException;
 
-public class FileKV implements KeyValueStorage {
+public class FileKV {
     private final Path filePath;
-    private Map<String, String> data;
 
-    public FileKV(Path filePath, Map<String, String> initialData) {
+    public FileKV(Path filePath) {
         this.filePath = filePath;
-        this.data = initialData;
     }
 
-    @Override
-    public void set(String key, String value) {
-        data.put(key, value); // Обновляем данные в памяти
-        saveToFile(); // Сохраняем данные в файл
+    public void set(String key, String value) throws IOException {
+        Map<String, String> data = Files.lines(filePath)
+                .map(line -> line.split("="))
+                .collect(Collectors.toMap(parts -> parts[0], parts -> parts[1]));
+        data.put(key, value);
+        Files.write(filePath, () -> data.entrySet().stream()
+                .<CharSequence>map(entry -> entry.getKey() + "=" + entry.getValue())
+                .iterator());
     }
 
-    @Override
-    public void unset(String key) {
-        data.remove(key);
-        saveToFile();
-    }
-
-    @Override
-    public String get(String key, String defaultValue) {
+    public String get(String key, String defaultValue) throws IOException {
+        Map<String, String> data = Files.lines(filePath)
+                .map(line -> line.split("="))
+                .collect(Collectors.toMap(parts -> parts[0], parts -> parts[1]));
         return data.getOrDefault(key, defaultValue);
     }
 
-    @Override
-    public Map<String, String> toMap() {
-        return data;
-    }
-
-    private void saveToFile() {
-        try {
-            ObjectMapper mapper = new ObjectMapper();
-            mapper.writeValue(Paths.get(filePath).toFile(), data); // Записываем данные в файл
-        } catch (IOException e) {
-            System.err.println("Failed to save data to file: " + e.getMessage());
-        }
-    }
-
-    private void loadFromFile () {
-        try {
-            String content = Files.readString(filePath);
-            data = Utils.unserialize(content);
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
+    public void unset(String key) throws IOException {
+        Map<String, String> data = Files.lines(filePath)
+                .map(line -> line.split("="))
+                .collect(Collectors.toMap(parts -> parts[0], parts -> parts[1]));
+        data.remove(key);
+        Files.write(filePath, () -> data.entrySet().stream()
+                .<CharSequence>map(entry -> entry.getKey() + "=" + entry.getValue())
+                .iterator());
     }
 }
+
 // END
